[package]
name = "RocketAnalytics-PlayerStatParser"
version = "1.5.0"
authors = ["Michael Doyle <mcdoyle7227@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxcars = "0.5.0"
dirs = "2.0.2"
serde = "1.0.101"
serde_json = "1.0.40"
